--- a/modules/videostab_polimi/Debug/makefile
+++ b/modules/videostab_polimi/Debug/makefile
@@ -44,7 +44,7 @@ all: videostab_polimi
 videostab_polimi: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: Cross G++ Linker'
-	g++ -L/usr/local/lib -o "videostab_polimi" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++ -L/usr/local/lib -p -pg -o "videostab_polimi" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
